# PyTorch-Calculator

./: .gitignore  Installer.bat  README.md  Start.bat  Update.bat  run.bat
app/: .gitignore  main.py  update.py
app/src/: analyze.py  canvas.py  console.py  crashreport.py  file.py  helpers.py  keyboard.py  mouse.py  pytorch.py  settings.py  setup.py  translate.py  ui.py  uicomponents.py  updater.py  variables.py  window.py
cache/Translations/: de.json
config/: EnterVirtualEnvironment.bat  changelog.txt  requirements.txt
cpp-app/: CMakeLists.txt  CMakePresets.json  README.md  Resource.h  cpp-app.cpp  cpp-app.h  cpp-app.rc  cpp-app.sln  cpp-app.vcxproj  cpp-app.vcxproj.filters
cpp-app/src/: analyze.cpp  analyze.h  canvas.cpp  canvas.h  console.cpp  console.h  crashreport.cpp  crashreport.h  file.cpp  file.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  opencv.cpp  opencv.h  pytorch.cpp  pytorch.h  settings.cpp  settings.h  simplewindow.cpp  simplewindow.h  translate.cpp  translate.h  ui.cpp  ui.h  uicomponents.cpp  uicomponents.h  updater.cpp  updater.h  variables.cpp  variables.h
rust-app/: Cargo.toml
rust-app/src/: main.rs
train/: .gitignore  Dataset-Creator.py  Experimental-Render-Raw-Dataset.py  Experimental-Train-Detection-Model.py  Generate-Training-Data.py  Generative-Adversarial-Network-Train.py  Render-Raw-Dataset.py  Run Dataset-Creator.bat  Run Render-Raw-Dataset.bat  Run Train-Detection-Model.bat  Train-Detection-Model.py  info.txt  train.py
train/dataset/: info.txt
train/models/: README.md
train/scripts/: Dataset-Creator.py  (+4 more)
(+2 files in other folders)
